--- a/src/app/Home/home/home.component.html
+++ b/src/app/Home/home/home.component.html
@@ -2,6 +2,6 @@
 <div class="container">
   <h2 style="text-align: center;"></h2>
     <div class="images">
-      <img src="assets/home.png"/>
+      <img src="assets/Logo.png"/>
     </div>
   </div>
